# SmartPaper

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  app.py  backend.py  cli_get_prompt_mode_paper.py  cli_get_prompt_mode_paper_stream.py  get_prompt_mode_paper.py  get_prompt_mode_paper_stream.py  gui_streamlit_get_prompt_mode_paper.py  main.py  old_Streamlit.app.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  streamlit.app.py  streamlit_app.py  streamlit_run.py
SmartPaper/config_files/: config.example.yaml
SmartPaper/core/: chat_with_paper.py  config.py  llm_core.py  model_manager.py  pdf_cache.py  pdf_to_md.py  prompt_config.py
SmartPaper/file_parsing/: pdf_to_md_fitz.py  pdf_to_md_fitz_with_image.py
SmartPaper/get_arxiv/: __init__.py  arxiv_client.py  arxiv_downloader.py
SmartPaper/llm/: llm.py
SmartPaper/utils/: llm_output_postprocess.py
app/: __init__.py  api.py  config.py  models.py  utils.py
app/docs/: api.md
app/utils/: utils.py  (+1 more)
config/: config.yaml  config.yaml.example  prompts.yaml  prompts_llm.yaml  prompts_vlm.yaml
docs/: config_yaml_guide.md  pdf_to_md_pdfplumber_readme.md  register_document_converter.md
examples/: analysis_prompt_coolpapaers.md  analysis_prompt_summary.md  analysis_prompt_yuanbao.md
image_cache/: cache.db
src/: __init__.py
tests/: README.md  description_prompt.md  ocr_prompt.md  run_tests.py  test_MinerU_convert.py  test_add_image_description.py  test_arxiv_download_read.py  test_download_models.py  test_local_papers.py  test_markdown_converter.py  test_multiple_urls.py  test_paper_url.py  test_pdf_converter.py  test_single_local_papers.py  test_single_url.py  test_stream.py  test_vlm_description.py
web_app/: __init__.py  app_config.py  image_processor.py  main.py  paper_processor.py  stream_processor.py  ui_utils.py
(+120 files in other folders)
